--- a/src/routes/layout/layout.scss
+++ b/src/routes/layout/layout.scss
@@ -1,4 +1,4 @@
-@import "./responsive.scss";
+@import "../../responsive.scss";
 
 .layout{
     // background-color: rebeccapurple;
@@ -26,6 +26,7 @@
 
     .content{
         // background-color: rebeccapurple;
-        flex: 1;
+        // flex: 1;
+        height: calc(100vh - 100px);
     }
 }
